sort categories and subcategories